--- a/Penn State Search/en.lproj/MainStoryboard.storyboard
+++ b/Penn State Search/en.lproj/MainStoryboard.storyboard
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12D78" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="8nz-4t-6si">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12D78" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="6Ia-rs-lS9">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Search View Controller-->
         <scene sceneID="5">
             <objects>
-                <viewController id="2" customClass="ViewController" sceneMemberID="viewController">
+                <viewController id="2" customClass="SearchViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3">
                         <rect key="frame" x="0.0" y="64" width="320" height="455"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -68,28 +68,28 @@
                                 <color key="backgroundColor" red="0.0" green="0.50196081399917603" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstItem="2N1-iQ-GFI" firstAttribute="trailing" secondItem="Gbg-d1-IoH" secondAttribute="trailing" type="default" id="3De-WE-QyB"/>
+                                    <constraint firstItem="v7N-RW-nlC" firstAttribute="top" secondItem="VKy-pp-N1W" secondAttribute="top" constant="354" id="6e7-gi-nVw"/>
                                     <constraint firstItem="2N1-iQ-GFI" firstAttribute="top" secondItem="VKy-pp-N1W" secondAttribute="top" constant="92" id="Atk-GE-5lI"/>
                                     <constraint firstItem="anb-GX-WGQ" firstAttribute="centerX" secondItem="VEx-Kt-lJZ" secondAttribute="centerX" type="default" id="BDS-zV-fy7"/>
-                                    <constraint firstItem="v7N-RW-nlC" firstAttribute="top" secondItem="VKy-pp-N1W" secondAttribute="top" constant="356" id="HOl-ID-dzn"/>
+                                    <constraint firstAttribute="bottom" secondItem="v7N-RW-nlC" secondAttribute="bottom" constant="106" id="F6x-ki-f8A"/>
                                     <constraint firstItem="Gbg-d1-IoH" firstAttribute="leading" secondItem="VKy-pp-N1W" secondAttribute="leading" constant="22" id="INK-bb-W1f"/>
                                     <constraint firstItem="anb-GX-WGQ" firstAttribute="top" secondItem="VKy-pp-N1W" secondAttribute="top" constant="300" id="OG8-H3-aRb"/>
-                                    <constraint firstItem="Gbg-d1-IoH" firstAttribute="top" secondItem="VKy-pp-N1W" secondAttribute="top" constant="38" id="RAG-H9-MCy"/>
                                     <constraint firstItem="Gbg-d1-IoH" firstAttribute="leading" secondItem="2N1-iQ-GFI" secondAttribute="leading" type="default" id="ZiS-6Z-NpT"/>
-                                    <constraint firstItem="VEx-Kt-lJZ" firstAttribute="top" secondItem="VKy-pp-N1W" secondAttribute="top" constant="158" id="bSr-Af-GsW"/>
                                     <constraint firstItem="VEx-Kt-lJZ" firstAttribute="trailing" secondItem="2N1-iQ-GFI" secondAttribute="trailing" type="default" id="fRn-QO-jSQ"/>
+                                    <constraint firstItem="VEx-Kt-lJZ" firstAttribute="top" secondItem="VKy-pp-N1W" secondAttribute="top" constant="157" id="gYO-vI-0WL"/>
                                     <constraint firstItem="2N1-iQ-GFI" firstAttribute="leading" secondItem="VEx-Kt-lJZ" secondAttribute="leading" type="default" id="h18-Y4-3RV"/>
-                                    <constraint firstAttribute="bottom" secondItem="v7N-RW-nlC" secondAttribute="bottom" constant="55" id="mcM-Ad-ggi"/>
                                     <constraint firstItem="v7N-RW-nlC" firstAttribute="leading" secondItem="VKy-pp-N1W" secondAttribute="leading" constant="124" id="pBa-cg-eIL"/>
                                     <constraint firstAttribute="trailing" secondItem="Gbg-d1-IoH" secondAttribute="trailing" constant="16" id="swc-Tn-mIh"/>
+                                    <constraint firstItem="Gbg-d1-IoH" firstAttribute="top" secondItem="VKy-pp-N1W" secondAttribute="top" constant="37" id="tdv-0s-tTa"/>
                                 </constraints>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="VKy-pp-N1W" firstAttribute="top" secondItem="3" secondAttribute="top" type="default" id="Be6-Vt-fLh"/>
+                            <constraint firstItem="VKy-pp-N1W" firstAttribute="top" secondItem="3" secondAttribute="top" constant="-1" id="3vw-y5-Glh"/>
+                            <constraint firstAttribute="bottom" secondItem="VKy-pp-N1W" secondAttribute="bottom" constant="1" id="9Ab-Jw-Yi1"/>
                             <constraint firstItem="VKy-pp-N1W" firstAttribute="leading" secondItem="3" secondAttribute="leading" type="default" id="YeP-1a-lLL"/>
                             <constraint firstItem="VKy-pp-N1W" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" type="default" id="r56-pW-sqb"/>
-                            <constraint firstItem="VKy-pp-N1W" firstAttribute="bottom" secondItem="3" secondAttribute="bottom" type="default" id="sh8-fP-Mla"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="VWM-eQ-Pbu"/>
@@ -102,7 +102,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-234" y="-601"/>
+            <point key="canvasLocation" x="8" y="-833"/>
         </scene>
         <!--Results View Controller-->
         <scene sceneID="Lii-SO-gyX">
@@ -158,7 +158,33 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="f9R-iM-n6I" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="317" y="-601"/>
+            <point key="canvasLocation" x="559" y="-833"/>
+        </scene>
+        <!--Building View Controller-->
+        <scene sceneID="uac-rp-B92">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ks8-Db-olH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="FZ5-QZ-oAu" customClass="BuildingViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="oBn-pD-kDR">
+                        <rect key="frame" x="0.0" y="64" width="320" height="455"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="UVJ-Pq-dAP">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="UVJ-Pq-dAP" firstAttribute="trailing" secondItem="oBn-pD-kDR" secondAttribute="trailing" type="default" id="DjU-Mx-tiv"/>
+                            <constraint firstItem="UVJ-Pq-dAP" firstAttribute="leading" secondItem="oBn-pD-kDR" secondAttribute="leading" type="default" id="UR7-4s-b8Z"/>
+                            <constraint firstItem="UVJ-Pq-dAP" firstAttribute="top" secondItem="oBn-pD-kDR" secondAttribute="top" type="default" id="Usf-g3-bFQ"/>
+                            <constraint firstItem="UVJ-Pq-dAP" firstAttribute="bottom" secondItem="oBn-pD-kDR" secondAttribute="bottom" type="default" id="ar9-Mk-bUb"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="pnx-kT-VJz"/>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="8" y="12"/>
         </scene>
         <!--Result Detail View Controller-->
         <scene sceneID="dAz-kP-It7">
@@ -199,7 +225,7 @@
                                         </view>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="PostalAddressCell" textLabel="r8G-At-hJf" rowHeight="131" style="IBUITableViewCellStyleDefault" id="6l4-bF-fSN">
-                                        <rect key="frame" x="0.0" y="179" width="320" height="132"/>
+                                        <rect key="frame" x="0.0" y="179" width="320" height="131"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="10" y="0.0" width="300" height="130"/>
@@ -231,7 +257,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TT0-fL-0Nl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="819" y="-601"/>
+            <point key="canvasLocation" x="1061" y="-833"/>
         </scene>
         <!--Navigation Controller - Item-->
         <scene sceneID="mqh-Ps-kdM">
@@ -250,71 +276,51 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IAc-Vr-X33" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-752" y="-601"/>
-        </scene>
-        <!--Table View Controller - Root View Controller-->
-        <scene sceneID="PL3-PN-low">
-            <objects>
-                <tableViewController id="Ilh-1c-ZzK" sceneMemberID="viewController">
-                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="8X5-cy-66e">
-                        <rect key="frame" x="0.0" y="64" width="320" height="455"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="lxO-UR-q7K">
-                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                </view>
-                            </tableViewCell>
-                        </prototypes>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="DmR-zX-IRQ"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="C0d-dw-w5t" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-234" y="257"/>
+            <point key="canvasLocation" x="-510" y="-833"/>
         </scene>
         <!--Navigation Controller - Item-->
-        <scene sceneID="Afj-4p-vfF">
+        <scene sceneID="X4K-lw-T2d">
             <objects>
-                <navigationController definesPresentationContext="YES" id="lTs-Kc-tOM" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="t5w-p6-los"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Lfd-Wd-h5J">
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sMZ-my-Jpt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController id="5Va-ab-Uer" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="rCb-yJ-1ug"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Uru-Ec-kuO">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
+                    <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="Ilh-1c-ZzK" kind="relationship" relationship="rootViewController" id="ngT-me-Fn8"/>
+                        <segue destination="FZ5-QZ-oAu" kind="relationship" relationship="rootViewController" id="pW8-fb-Jn6"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="w25-oC-foN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-752" y="257"/>
+            <point key="canvasLocation" x="-510" y="12"/>
         </scene>
         <!--Tab Bar Controller-->
-        <scene sceneID="714-43-xoU">
+        <scene sceneID="hIz-aV-n5W">
             <objects>
-                <tabBarController id="8nz-4t-6si" sceneMemberID="viewController">
+                <tabBarController id="6Ia-rs-lS9" sceneMemberID="viewController">
                     <toolbarItems/>
                     <nil key="simulatedBottomBarMetrics"/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" id="NNL-MH-b4E">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="DFF-1i-BWC">
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="qf3-To-xpT" kind="relationship" relationship="viewControllers" id="Yqp-sH-UIq"/>
-                        <segue destination="lTs-Kc-tOM" kind="relationship" relationship="viewControllers" id="R38-3l-naj"/>
+                        <segue destination="qf3-To-xpT" kind="relationship" relationship="viewControllers" id="oHf-yo-SL6"/>
+                        <segue destination="5Va-ab-Uer" kind="relationship" relationship="viewControllers" id="nuS-7G-dKO"/>
                     </connections>
                 </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="L1v-WX-WSw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aaw-j7-eXO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1362" y="-129"/>
+            <point key="canvasLocation" x="-1236" y="-477"/>
         </scene>
     </scenes>
     <classes>
+        <class className="BuildingViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BuildingViewController.h"/>
+        </class>
         <class className="NSLayoutConstraint" superclassName="NSObject">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
         </class>
@@ -330,8 +336,8 @@
                 <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
             </relationships>
         </class>
-        <class className="ViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
+        <class className="SearchViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SearchViewController.h"/>
             <relationships>
                 <relationship kind="action" name="searchPressed:"/>
                 <relationship kind="outlet" name="accessIdField" candidateClass="UITextField"/>
