--- a/Penn State Search/en.lproj/MainStoryboard.storyboard
+++ b/Penn State Search/en.lproj/MainStoryboard.storyboard
@@ -160,7 +160,7 @@
             </objects>
             <point key="canvasLocation" x="559" y="-833"/>
         </scene>
-        <!--Building View Controller-->
+        <!--Building View Controller - Building Search-->
         <scene sceneID="uac-rp-B92">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ks8-Db-olH" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -171,6 +171,24 @@
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="UVJ-Pq-dAP">
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" textLabel="80T-1Q-W0y" style="IBUITableViewCellStyleDefault" id="V4h-1l-oCO">
+                                        <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="80T-1Q-W0y">
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                    </tableViewCell>
+                                </prototypes>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -181,10 +199,41 @@
                             <constraint firstItem="UVJ-Pq-dAP" firstAttribute="bottom" secondItem="oBn-pD-kDR" secondAttribute="bottom" type="default" id="ar9-Mk-bUb"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="pnx-kT-VJz"/>
+                    <navigationItem key="navigationItem" title="Building Search" id="pnx-kT-VJz"/>
+                    <connections>
+                        <outlet property="tableView" destination="UVJ-Pq-dAP" id="Rnr-DL-xe9"/>
+                        <segue destination="PL1-wY-f3K" kind="push" identifier="BuildingImageSegue" id="dah-Z5-3og"/>
+                    </connections>
                 </viewController>
             </objects>
             <point key="canvasLocation" x="8" y="12"/>
+        </scene>
+        <!--Building Image View Controller-->
+        <scene sceneID="aky-Vq-ZB4">
+            <objects>
+                <viewController storyboardIdentifier="BuildingImageView" id="PL1-wY-f3K" customClass="BuildingImageViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="SqY-cy-Bzz">
+                        <rect key="frame" x="0.0" y="64" width="320" height="455"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fvw-a5-JS6"/>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="fvw-a5-JS6" firstAttribute="top" secondItem="SqY-cy-Bzz" secondAttribute="top" type="default" id="Fea-qz-FuS"/>
+                            <constraint firstItem="fvw-a5-JS6" firstAttribute="bottom" secondItem="SqY-cy-Bzz" secondAttribute="bottom" type="default" id="Rsv-vb-e5h"/>
+                            <constraint firstItem="fvw-a5-JS6" firstAttribute="trailing" secondItem="SqY-cy-Bzz" secondAttribute="trailing" type="default" id="T72-rY-MAv"/>
+                            <constraint firstItem="fvw-a5-JS6" firstAttribute="leading" secondItem="SqY-cy-Bzz" secondAttribute="leading" type="default" id="lYs-vK-OEx"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="NkQ-g1-SXE"/>
+                    <connections>
+                        <outlet property="scrollView" destination="fvw-a5-JS6" id="2eJ-TZ-gPU"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ot8-Qz-Ha3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="559" y="12"/>
         </scene>
         <!--Result Detail View Controller-->
         <scene sceneID="dAz-kP-It7">
@@ -318,8 +367,17 @@
         </scene>
     </scenes>
     <classes>
+        <class className="BuildingImageViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BuildingImageViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="scrollView" candidateClass="UIScrollView"/>
+            </relationships>
+        </class>
         <class className="BuildingViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/BuildingViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
+            </relationships>
         </class>
         <class className="NSLayoutConstraint" superclassName="NSObject">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
